    while it inserts =\(= and =\)= when ~TeX-electric-math~ is
    =("\(" . "\)")=.
  - When ~TeX-electric-math~ is a pair of dollars and the point is in
    inline math (without active region), =$= inserts two dollars, not
    one dollar which just closes the math mode.
- Recognize =.ltx= extension as regular LaTeX file.

** Removed

- Delete function ~LaTeX-env-contents~.

* [14.0.5] - 2024-05-19

** Added

- Add support for indirect buffers cloned from buffers visiting a file.
  In indirect buffer, preview-latex works correctly when the command
  ~preview-region~ is invoked.  The command ~preview-document~ puts
  preview images in the base buffer, not in the indirect buffer itself.
- Add preliminary support for processing files with latexmk.  Support
  for =dvipdfmx= and the choice for viewer after compilation are not
  optimal, yet.  Overall, the support comes close to what the
  =auctex-latexmk= library provides.
- Add new command ~TeX-fold-section~ (bound to =C-c C-o C-s=) which
  hides all configured macros in the section containing point when
  ~TeX-fold-mode~ is active.  The unfold counterpart
  ~TeX-fold-clearout-section~ is bound to =C-c C-o s=.
- Add new custom option ~TeX-fold-region-functions~ which is a list of
  additional functions to call when folding a region.
- Add new custom option ~TeX-fold-auto-reveal~ which controls how the
  original source text is revealed when user clicks the folded portion
  by mouse.
- Add new custom options ~TeX-fold-auto-reveal-commands~ and
  ~preview-auto-reveal-commands~ which are lists of commands revealing
  folded or previewed buffer text.
- Add new custom option ~preview-protect-point~ which determines whether
  previews generated on top of the current point should be temporarily
  opened (~nil~ by default).
- Add new custom option ~preview-leave-open-previews-visible~ which
  determines if the preview code stays visible once opened.
- Change the default value of ~TeX-one-master~ in order to recognize the